# icam-factory

./: .env.example  .gitignore  Makefile  README.md  danger_zones.json  docker-compose.yml  pyproject.toml  requirements.txt
datasets/Hard Hat Workers.v2-raw_75-25_traintestsplit.yolov11/: README.roboflow.md
datasets/Hard Hat Workers.v5-raw_headhelmetclasses.yolov11/: README.dataset.md  README.roboflow.md  data.yaml
datasets/OxfordTownCentre/: .gitignore
notebooks/: 1.DetectionModel.ipynb  1.Head-and-Helmet.ipynb  DetectionModel.ipynb
runs/: .gitignore
src/: alerts.py  config.py  detectors.py  main.py  stream.py  zone_definer.py
