[project]
name = "icam-factory"
version = "0.1.0"
description = "YOLO-based detection models for industrial safety"
requires-python = ">=3.13"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
