[project]
name = "icam-factory"
version = "0.1.0"
description = "YOLO-based detection models for industrial safety"
requires-python = ">=3.13"
dynamic = ["dependencies"]

[project.scripts]
icam = "main:main"
icam-zone = "zone_definer:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "stream", "config", "detectors", "alerts", "zone_definer"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
